src/objects/APTS_PDF_Attachment_Status__c/APTS_PDF_Attachment_Status__c.object-meta.xml
<CustomObject>
    <label>Attachment Integration Status</label>
    <nameField>
        <displayFormat>PDF-{0000000000}</displayFormat>
        <label>PDF Attachment Status Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Attachment Integration Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>