src/objects/APTS_PDF_Attachment_Status__c/fields/APTS_Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>APTS_Attachment_Id__c</fullName>
    <label>Attachment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>