src/objects/APTS_PDF_Attachment_Status__c/fields/APTS_Attachment_Title__c.field-meta.xml
<CustomField>
    <fullName>APTS_Attachment_Title__c</fullName>
    <label>Title</label>
    <length>50</length>
    <type>Text</type>
</CustomField>