src/objects/APTS_PDF_Attachment_Status__c/fields/APTS_CM_Billing_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>APTS_CM_Billing_Document_Number__c</fullName>
    <label>CM Billing Document Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>