src/objects/APTS_PDF_Attachment_Status__c/fields/APTS_Credit_Memo__c.field-meta.xml
<CustomField>
    <fullName>APTS_Credit_Memo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Credit Memo</label>
    <referenceTo>Apttus_Billing__CreditMemo__c</referenceTo>
    <relationshipName>PDF_Attachment_Status</relationshipName>
    <type>Lookup</type>
</CustomField>