src/objects/APTS_PDF_Attachment_Status__c/fields/APTS_Delete_Draft_Attachments__c.field-meta.xml
<CustomField>
    <fullName>APTS_Delete_Draft_Attachments__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delete Draft Attachments</label>
    <type>Checkbox</type>
</CustomField>