src/objects/APTS_PDF_Attachment_Status__c/fields/APTS_Integration_Requested__c.field-meta.xml
<CustomField>
    <fullName>APTS_Integration_Requested__c</fullName>
    <label>Integration Requested</label>
    <type>DateTime</type>
</CustomField>