src/objects/APTS_PDF_Attachment_Status__c/fields/APTS_Integration_Result__c.field-meta.xml
<CustomField>
    <fullName>APTS_Integration_Result__c</fullName>
    <label>Integration Result</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>