src/objects/APTS_PDF_Attachment_Status__c/fields/APTS_Invoice__c.field-meta.xml
<CustomField>
    <fullName>APTS_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Apttus_Billing__Invoice__c</referenceTo>
    <relationshipName>PDF_Attachment_Status</relationshipName>
    <type>Lookup</type>
</CustomField>