src/objects/APTS_PDF_Attachment_Status__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>APTS_Invoice__c</columns>
    <columns>APTS_Invoice_Status__c</columns>
    <columns>APTS_Credit_Memo__c</columns>
    <columns>APTS_Credit_Memo_Status__c</columns>
    <columns>APTS_Status__c</columns>
    <columns>APTS_Integration_Result__c</columns>
    <columns>APTS_Integration_Requested__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>