src/objects/APTS_PDF_Attachment_Status__c/listViews/CMR.listView-meta.xml
<ListView>
    <fullName>CMR</fullName>
    <columns>NAME</columns>
    <columns>APTS_Credit_Memo_Status__c</columns>
    <columns>APTS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APTS_Credit_Memo_Status__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>CMR</label>
    <language>en_US</language>
</ListView>