src/objects/APTS_PDF_Attachment_Status__c/listViews/Invoice_PDF_status_with_error.listView-meta.xml
<ListView>
    <fullName>Invoice_PDF_status_with_error</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>APTS_Status__c</columns>
    <columns>APTS_Invoice__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APTS_Status__c</field>
        <operation>equals</operation>
        <value>Error,To be Processed</value>
    </filters>
    <label>Invoice PDF status with error</label>
    <language>en_US</language>
</ListView>