src/objects/APTS_PDF_Attachment_Status__c/listViews/Invoices.listView-meta.xml
<ListView>
    <fullName>Invoices</fullName>
    <columns>NAME</columns>
    <columns>Attachment_Titles__c</columns>
    <columns>APTS_Integration_Requested__c</columns>
    <columns>APTS_Integration_Result__c</columns>
    <columns>APTS_Status__c</columns>
    <columns>APTS_Invoice__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>APTS_Invoice__c</field>
        <operation>contains</operation>
        <value>INV</value>
    </filters>
    <filters>
        <field>APTS_Status__c</field>
        <operation>contains</operation>
        <value>To be Processed,Requested</value>
    </filters>
    <label>Invoices</label>
    <language>en_US</language>
</ListView>